--- a/src/YarnSpinner.Console/ysc.csproj
+++ b/src/YarnSpinner.Console/ysc.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>YarnSpinnerConsole</RootNamespace>
     <UseAppHost>true</UseAppHost>
     <PublishSelfContained>true</PublishSelfContained>
-    <PublishTrimmed>true</PublishTrimmed>         
+    <!-- <PublishTrimmed>true</PublishTrimmed> -->         
   </PropertyGroup>
 
   <ItemGroup>
